add c4 update swagger
