# docs/storage_swagger.json
@@ -28,13 +28,6 @@
                 "summary": "Загрузка файла",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Idempotency Key",
-                        "name": "X-Idempotency-Key",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "type": "file",
                         "description": "File to upload",
                         "name": "file",
@@ -94,28 +87,14 @@
         },
         "/metrics": {
             "get": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Статус хранилища",
+                "description": "Метрики хранилища",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "metrics"
                 ],
-                "summary": "Статус хранилища",
-                "parameters": [
-                    {
-                        "type": "file",
-                        "description": "File to upload",
-                        "name": "file",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
+                "summary": "Метрики хранилища",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -135,7 +114,8 @@
             ],
             "properties": {
                 "id": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "uuid"
                 }
             }
         }
