# internal/gateway/api/http/v1/handler.go
@@ -14,7 +14,6 @@ import (
 // @securityDefinitions.apikey Bearer
 // @in header
 // @name Authorization
-// @description Type "Bearer" followed by a space and JWT token.
 
 type Handler struct {
 	services   *service.Services
